--- a/index.html
+++ b/index.html
@@ -13,24 +13,36 @@
 
         </div>
         <div class="input">
+            <form action="#">
             <textarea name="" id="input-textarea" cols="30" rows="10"></textarea>
+            <input name="angle " type="radio" value="gradus" id="gradus" checked><label for="gradus">Градусы</label>
+            <input name="angle " type="radio" value="radian" id="radian"><label for="radian">Радианы</label>
+        </form>
         </div>
         <div class="buttons">
-            <div class="button-block"><button class="button-number">0</button></div>
-            <div class="button-block"><button class="button-number">1</button></div>
-            <div class="button-block"><button class="button-number">2</button></div>
-            <div class="button-block"><button class="button-number">3</button></div>
-            <div class="button-block"><button class="button-number">4</button></div>
-            <div class="button-block"><button class="button-number">5</button></div>
-            <div class="button-block"><button class="button-number">6</button></div>
-            <div class="button-block"><button class="button-number">7</button></div>
-            <div class="button-block"><button class="button-number">8</button></div>
-            <div class="button-block"><button class="button-number">9</button></div>
+            <div class="button-block-delete"><button class="button-operator-delete">С</button></div>
+            <div class="button-block-back"><button class="button-operator-back">&larr;</button></div>
+            <div class="button-block-sin"><button class="button-operator-sin">sin</button></div>
+            <div class="button-block-cos"><button class="button-operator-cos">cos</button></div>
+            <div class="button-block-tg"><button class="button-operator-tg">tg</button></div>
+            <div class="button-block-ctg"><button class="button-operator-ctg">ctg</button></div>
+            <div class="button-block-radic"><button class="button-operator-radic">&radic;</button></div>  
             <div class="button-block"><button class="button-operator">+</button></div>
             <div class="button-block"><button class="button-operator">-</button></div>
             <div class="button-block"><button class="button-operator">*</button></div>
             <div class="button-block"><button class="button-operator">/</button></div>
-            <div class="button-block"><button class="button-operator-equally">=</button></div>    
+            <div class="button-block"><button class="button-number">7</button></div>
+            <div class="button-block"><button class="button-number">8</button></div>
+            <div class="button-block"><button class="button-number">9</button></div>
+            <div class="button-block"><button class="button-number">4</button></div>
+            <div class="button-block"><button class="button-number">5</button></div>
+            <div class="button-block"><button class="button-number">6</button></div>
+            <div class="button-block"><button class="button-number">1</button></div>
+            <div class="button-block"><button class="button-number">2</button></div>
+            <div class="button-block"><button class="button-number">3</button></div>
+            <div class="button-block"><button class="button-number">0</button></div>
+            <div class="button-block "><button class="button-operator-separation">.</button></div>  
+            <div class="button-block-equal"><button class="button-operator-equally">=</button></div>           
         </div>
     </div>
     <script src="./js/main.js"></script>
