add arithmetic operations

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="input">
             <form action="#">
-            <textarea name="" id="input-textarea" cols="30" rows="10"></textarea>
+            <input type="text" name="" id="input-textarea"></input>
             <input name="angle " type="radio" value="gradus" id="gradus" checked><label for="gradus">Градусы</label>
             <input name="angle " type="radio" value="radian" id="radian"><label for="radian">Радианы</label>
         </form>
@@ -31,6 +31,8 @@
             <div class="button-block"><button class="button-operator">-</button></div>
             <div class="button-block"><button class="button-operator">*</button></div>
             <div class="button-block"><button class="button-operator">/</button></div>
+            <div class="button-block"><button class="button">(</button></div>
+            <div class="button-block"><button class="button">)</button></div>
             <div class="button-block"><button class="button-number">7</button></div>
             <div class="button-block"><button class="button-number">8</button></div>
             <div class="button-block"><button class="button-number">9</button></div>
@@ -42,7 +44,11 @@
             <div class="button-block"><button class="button-number">3</button></div>
             <div class="button-block"><button class="button-number">0</button></div>
             <div class="button-block "><button class="button-operator-separation">.</button></div>  
-            <div class="button-block-equal"><button class="button-operator-equally">=</button></div>           
+            <div class="button-block-equal"><button class="button-operator-equally">=</button></div>
+            <div class="button-block"><button class="button-operator-precent">%</button></div>
+            <div class="button-block"><button class="button-operator-pow">^</button></div>
+            <div class="button-block"><button class="button-operator-factorial">!</button></div> 
+            <div class="button-block-ln"><button class="button-operator-ln">ln</button></div>
         </div>
     </div>
     <script src="./js/main.js"></script>
