--- a/index.html
+++ b/index.html
@@ -15,40 +15,55 @@
         <div class="input">
             <form action="#">
             <input type="text" name="" id="input-textarea"></input>
-            <input name="angle " type="radio" value="gradus" id="gradus" checked><label for="gradus">Градусы</label>
-            <input name="angle " type="radio" value="radian" id="radian"><label for="radian">Радианы</label>
+            <input name="angle" type="radio" value="gradus" id="gradus" checked><label for="gradus">Градусы</label>
+            <input name="angle" type="radio" value="radian" id="radian"><label for="radian">Радианы</label>
         </form>
         </div>
-        <div class="buttons">
-            <div class="button-block-delete"><button class="button-operator-delete">С</button></div>
-            <div class="button-block-back"><button class="button-operator-back">&larr;</button></div>
-            <div class="button-block-sin"><button class="button-operator-sin">sin</button></div>
-            <div class="button-block-cos"><button class="button-operator-cos">cos</button></div>
-            <div class="button-block-tg"><button class="button-operator-tg">tg</button></div>
-            <div class="button-block-ctg"><button class="button-operator-ctg">ctg</button></div>
-            <div class="button-block-radic"><button class="button-operator-radic">&radic;</button></div>  
-            <div class="button-block"><button class="button-operator">+</button></div>
-            <div class="button-block"><button class="button-operator">-</button></div>
-            <div class="button-block"><button class="button-operator">*</button></div>
-            <div class="button-block"><button class="button-operator">/</button></div>
-            <div class="button-block"><button class="button">(</button></div>
-            <div class="button-block"><button class="button">)</button></div>
-            <div class="button-block"><button class="button-number">7</button></div>
-            <div class="button-block"><button class="button-number">8</button></div>
-            <div class="button-block"><button class="button-number">9</button></div>
-            <div class="button-block"><button class="button-number">4</button></div>
-            <div class="button-block"><button class="button-number">5</button></div>
-            <div class="button-block"><button class="button-number">6</button></div>
-            <div class="button-block"><button class="button-number">1</button></div>
-            <div class="button-block"><button class="button-number">2</button></div>
-            <div class="button-block"><button class="button-number">3</button></div>
-            <div class="button-block"><button class="button-number">0</button></div>
-            <div class="button-block "><button class="button-operator-separation">.</button></div>  
-            <div class="button-block-equal"><button class="button-operator-equally">=</button></div>
-            <div class="button-block"><button class="button-operator-precent">%</button></div>
-            <div class="button-block"><button class="button-operator-pow">^</button></div>
-            <div class="button-block"><button class="button-operator-factorial">!</button></div> 
-            <div class="button-block-ln"><button class="button-operator-ln">ln</button></div>
+        <div class="flex-container">
+            <div class="flex-row">
+                <div class="button-block added "><button class="button-operator-pow">^</button></div>
+                <div class="button-block complex-function"><button class="button-operator-radic">&radic;</button></div>
+                <div class="button-block added "><button class="button">(</button></div>
+                <div class="button-block added "><button class="button-operator-separation">.</button></div>  
+                <div class="button-block added "><button class="button">)</button></div>
+                <div class="button-block added "><button class="button-operator">/</button></div>
+                <div class="button-block"><button class="button-operator-back">&larr;</button></div>
+            </div>
+            <div class="flex-row">
+                <div class="button-block complex-function"><button class="button-operator-sin">sin</button></div>
+                <div class="button-block complex-function"><button class="button-operator-sin">sinh</button></div>
+                <div class="button-block complex-function"><button class="button-operator-ctg">ctg</button></div>
+                <div class="button-block added "><button class="button-number">7</button></div>
+                <div class="button-block added "><button class="button-number">8</button></div>
+                <div class="button-block added "><button class="button-number">9</button></div>
+                <div class="button-block added "><button class="button-operator">*</button></div>
+            </div>
+            <div class="flex-row">
+                <div class="button-block complex-function"><button class="button-operator-cos">cos</button></div>
+                <div class="button-block complex-function"><button class="button-operator-cos">cosh</button></div>
+                <div class="button-block complex-function"><button class="button-operator-ctg">sec</button></div>
+                <div class="button-block added "><button class="button-number">4</button></div>
+                <div class="button-block added "><button class="button-number">5</button></div>
+                <div class="button-block added "><button class="button-number">6</button></div>
+                <div class="button-block added "><button class="button-operator">-</button></div>
+            </div>
+            <div class="flex-row">
+                <div class="button-block complex-function"><button class="button-operator-tg">tan</button></div>
+                <div class="button-block complex-function"><button class="button-operator-tg">tanh</button></div>
+                <div class="button-block complex-function"><button class="button-operator-ctg">csc</button></div>
+                <div class="button-block added "><button class="button-number">1</button></div>
+                <div class="button-block added "><button class="button-number">2</button></div>
+                <div class="button-block added "><button class="button-number">3</button></div>
+                <div class="button-block added "><button class="button-operator">+</button></div>
+            </div>
+            <div class="flex-row">
+                <div class="button-block added "><button class="button-operator-precent">%</button></div>
+                <div class="button-block complex-function"><button class="button-operator-ln">ln</button></div>
+                <div class="button-block added "><button class="button-operator-factorial">!</button></div> 
+                <div class="button-block added "><button class="button-number">0</button></div>
+                <div class="button-block"><button class="button-operator-equally">=</button></div>
+                <div class="button-block"><button class="button-operator-delete">С</button></div>
+            </div>
         </div>
     </div>
     <script src="./js/main.js"></script>
