--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/output.css">
 </head>
 <body>
     <div class="container">
@@ -71,9 +69,6 @@
             </div>
         </div>
     </div>
-    <script type="module" src="./js/complexFunctions.js"></script>
-    <script type="module" src="./js/factorial.js"></script>
-    <script type="module" src="./js/computation.js"></script>
-    <script type="module" src="./js/main.js"></script>
+    <script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 </html>
